main.css
@font-face {
	font-family: Cinzel;
	src: url(fonts/CinzelVariable.ttf);
}

@font-face {
	font-family: Fredoka;
	src: url(fonts/FredokaOne-Regular.ttf);
}

@font-face {
	font-family: Zen_JP;
	src: url(fonts/ZenAntique-Regular.ttf);
}

@font-face {
	font-family: DarkSouls;
	src: url(fonts/OptimusPrinceps.ttf);
}

@font-face {
	font-family: DarkSoulsSB;
	src: url(fonts/OptimusPrincepsSemiBold.ttf);
}

* a {
	-webkit-tap-highlight-color: transparent !important;
}

.bio {
	position: absolute;
	display: flex;
	flex-direction: column;
	width: fit-content;
	max-width: 500px;
	padding-left: 24px;
	padding-right: 24px;
	left: 50%;
	top: 50%;
	right: 50%;
	transform: translate(-50%, -50%);
	opacity: 0;
	visibility: collapse;
	transition: opacity 0.5s ease-in;
}

.bio div {
	display: flex;
	text-align: center;
	flex-direction: column;
	font-family: Cinzel;
	color: white;
}

.bio p {
	max-width: 500px;
}

.bio ul {
	font-family: Cinzel;
	color: white;
	text-align: left !important;
}

.maindivbg {
	background-color: transparent;
	background: url(https://steamuserimages-a.akamaihd.net/ugc/1761446532953187247/B713E72A4007E29A1D2B53919716E2BA9BF237BD/)
		no-repeat;
	position: absolute;
	height: 100vh;
	width: 100vw;
	background-position: bottom;
	background-position-x: center;
	opacity: 0.31;
	transition: opacity 0.5s ease-in, filter 0.5s ease-in;
	filter: blur(1.5px);
	background-size: 164px;
	z-index: -100;
}

.maindiv {
	padding-left: 24px;
	padding-right: 24px;
	z-index: 15;
	visibility: collapse;
	width: 0;
	opacity: 0;
	margin: 0 auto;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	height: 100vh;
	transition: opacity 0.5s ease-in;
}

.maindiv a {
	font-weight: bold;
	text-align: center;
	font-size: 2.4em;
	padding-bottom: 16px;
	font-family: DarkSouls;
	color: rgb(194, 194, 194);
	text-decoration: none;
	transition: color 0.3s, filter 0.3s linear, opacity 0.5s ease-in;
	user-select: none;
	-moz-user-select: none;
}

.closebutton {
	visibility: collapse;
	position: absolute !important;
	left: 24px !important;
	top: 24px;
	transition: color 0.3s, filter 0.3s linear, opacity 0.5s ease-in;
	font-size: 2.4em;
	font-weight: bold;
	font-family: DarkSouls;
	color: rgb(194, 194, 194);
	user-select: none;
	-moz-user-select: none;
	text-decoration: none;
}

.closebutton:hover {
	font-family: DarkSouls;
	color: white;
	filter: drop-shadow(0px 0px 3px whitesmoke);
}

.maindiv a:hover {
	font-family: DarkSouls;
	color: white;
	filter: drop-shadow(0px 0px 3px whitesmoke);
}

body {
	color: rgba(255, 255, 255, 1);
	background-color: black;
	height: fit-content;
	margin: 0;
	padding: 0;
	transition: background-color 0.5s ease-in;
	overflow: hidden;
}

.landingdiv {
	position: absolute;
	width: fit-content;
	left: 50%;
	top: 50%;
	transform: translate(-50%, -50%);
	transition: opacity 0.5s ease-in;
	z-index: 100;
}

.landing {
	text-align: center;
	font-family: Cinzel;
	display: block;
	color: rgba(180, 180, 180, 0.9);
	text-shadow: 0px 0px 4px white;
	font-size: 1.6em;
	transition: font-size 0.5s, color 0.15s linear;
	user-select: none;
	-moz-user-select: none;
}

.landingjp {
	text-align: center;
	display: block;
	color: rgba(150, 150, 150, 1);
	text-shadow: 0px 0px 3px whitesmoke;
	font-size: 1.3em;
	transition: font-size 0.5s, color 0.15s linear;
	font-family: Zen_JP;
	user-select: none;
	-moz-user-select: none;
}

.landingdiv:hover .landingjp {
	color: rgba(255, 255, 255, 0.9);
	font-size: 1.33em;
}

.landingdiv:hover .landing {
	color: rgba(255, 255, 255, 0.9);
	font-size: 1.63em;
}

.backgroundimg {
	z-index: -11;

	position: absolute;
	top: 0;
	height: 100vh;
	width: auto;
}

